<resources>
    <string name="app_name">Stymeup</string>
    <string name="title_activity_gglmap">gglmap</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="AlreadyLogin">Already a Member? Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Logo</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email address</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Create Your Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Search">Search Items</string>
    <string name="SHOPPINGBAG">C A R T </string>
    <string name="favrt">F A V O U R I T E </string>
    <string name="search">S E A R C H </string>
    <string name="profile">P R O F I L E</string>
    <string name="checkout">C H E C K O U T</string>
    <string name="product_dscr">BLACK TEE \n\n The Black Tee is BACK! \n\n Rs. 1,439.00</string>
    <string name="descrition">Product Name \n Description \n Price 00$</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="exampleAddress">Robert Robertson\n\n 1234 NW Bobcat Lane,\n St. Robert, MO 65584.\n\n+92 123-456789-1</string>
</resources>