<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/stylogo">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registrationPage"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="Get UpTo 30% Off"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/textInputName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/edittxtusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:hint="@string/Username"
                android:inputType="text"
                android:textColorHint="@color/black" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/textemail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/edttxtemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black" />

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/textInputPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/black">

            </EditText>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/txtConformPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:cardElevation="10dp">

            <EditText
                android:id="@+id/edttxtConformPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                android:hint="@string/ConfirmPassword"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/black">

            </EditText>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btnlog"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/black"
            android:elevation="20dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="20dp">

            <Button
                android:id="@+id/BtnRegister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/Register"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="55dp"
            android:backgroundTint="@color/white"
            android:text="Already a Member?"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal">

        </TextView>

        <Button
            android:id="@+id/btnreg_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="242dp"
            android:layout_marginTop="-35dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/Login"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal">

        </Button>

    </LinearLayout>
</RelativeLayout>